--- a/thesis/spoof_test.tex
+++ b/thesis/spoof_test.tex
@@ -1,10 +1,10 @@
 \documentclass[../main.tex]{subfiles}
 
 \chapter{GPS manipulation tests}\label{gps_manipulation}
-In this chapter, we present the tests that were conducted. Ideally, these tests would have been performed by using a GPS spoofer like the "Civil GPS spoofer" that were introduced in the introduction of this report (see \ref{benchmark_spoofer}). Unfortunately, or perhaps not, this kind of hardware is hard to come by and spoofing GPS signals is not legal. What we did instead was manipulating the time solution of the GPS receivers by moving the antennas. By performing these tests, we where able to not only test the Server architecture in the atomic clock controller, but also the filters and the clock model. We also present data gathered during an unplanned GPS disturbance. 
+In this chapter we present the tests that were conducted. Ideally these tests would have been performed by using a GPS spoofer like the "Civil GPS spoofer" that was introduced in subsection \ref{benchmark_spoofer}. Unfortunately, or perhaps not, this kind of hardware is hard to come by and spoofing GPS signals is not legal. What we did instead was manipulating the time solution of the GPS receivers by moving the antennas. By performing these tests, we where able to not only test the Server architecture in the atomic clock controller, but also the filters and the clock model. We also present data gathered during an unplanned GPS disturbance. 
 
 \section{Logging of reference data }\label{data_aquisition}
-In order to create an accurate clock-model of the atomic clock, it was necessary to log data from it while it was running in a disciplined mode. In the disciplined mode, the atomic clock will correct it's frequency based on either a 1 PPS (Pulse per second) signal or a 10 MHz signal as discussed earlier under section (\ref{csac_com}) A similar approach was used in order to collect GPS data. Data from two u-blox NEO-M8T was gathered over the same time period as the data gathered from the atomic clock. By gathering the data over the same period, it was possible to detect any correlation between the time solved by the GPS receivers and any frequency adjustments done by the atomic clock. It also provided valuable data that could be used to tune the filters in the atomic clock controller. The data gathering was done by simple Python scripts (appendix \ref{CL} and \ref{GL}) running on a computer connected to the GPS receivers and the atomic clock. Figure (\ref{CLS}) shows a block diagram of the setup.
+In order to create an accurate clock-model of the atomic clock, it was necessary to log data from it while it was running in a disciplined mode. In the disciplined mode, the atomic clock will correct its frequency based on either a 1 pulse per second (PPS) signal or a 10 MHz signal as discussed earlier under section (\ref{csac_com}) A similar approach was used in order to collect GPS data. Data from two u-blox NEO-M8T was gathered over the same time period as the data gathered from the atomic clock. By gathering the data over the same period it was possible to detect any correlation between the time solved by the GPS receivers and any frequency adjustments done by the atomic clock. It also provided valuable data that could be used to tune the filters in the atomic clock controller. The data gathering was done by simple Python scripts (appendix \ref{CL} and \ref{GL}) running on a computer connected to the GPS receivers and the atomic clock. Figure (\ref{CLS}) shows a block diagram of the setup.
 
 \section{Setup}
 \begin{figure}
