--- a/thesis/spoof_test.tex
+++ b/thesis/spoof_test.tex
@@ -4,7 +4,7 @@
 In this chapter we present the tests that were conducted. Ideally these tests would have been performed by using a GPS spoofer like the "Civil GPS spoofer" that was introduced in subsection \ref{benchmark_spoofer}. Unfortunately, or perhaps not, this kind of hardware is hard to come by and spoofing GPS signals is not legal. What we did instead was manipulating the time solution of the GPS receivers by moving the antennas. By performing these tests, we where able to not only test the Server architecture in the atomic clock controller, but also the filters and the clock model. We also present data gathered during an unplanned GPS disturbance. 
 
 \section{Logging of reference data }\label{data_aquisition}
-In order to create an accurate clock-model of the atomic clock, it was necessary to log data from it while it was running in a disciplined mode. In the disciplined mode, the atomic clock will correct its frequency based on either a 1 pulse per second (PPS) signal or a 10 MHz signal as discussed earlier under section (\ref{csac_com}) A similar approach was used in order to collect GPS data. Data from two u-blox NEO-M8T was gathered over the same time period as the data gathered from the atomic clock. By gathering the data over the same period it was possible to detect any correlation between the time solved by the GPS receivers and any frequency adjustments done by the atomic clock. It also provided valuable data that could be used to tune the filters in the atomic clock controller. The data gathering was done by simple Python scripts (appendix \ref{CL} and \ref{GL}) running on a computer connected to the GPS receivers and the atomic clock. Figure (\ref{CLS}) shows a block diagram of the setup.
+In order to create an accurate clock-model of the atomic clock, it was necessary to log data from it while it was running in a disciplined mode. In the disciplined mode, the atomic clock will correct its frequency based on either a one pulse per second (PPS) signal or a 10 MHz signal as discussed earlier under section (\ref{csac_com}) A similar approach was used in order to collect GPS data. Data from two u-blox NEO-M8T was gathered over the same time period as the data gathered from the atomic clock. By gathering the data over the same period it was possible to detect any correlation between the time solved by the GPS receivers and any frequency adjustments done by the atomic clock. It also provided valuable data that could be used to tune the filters in the atomic clock controller. The data gathering was done by simple Python scripts (appendix \ref{CL} and \ref{GL}) running on a computer connected to the GPS receivers and the atomic clock. Figure (\ref{CLS}) shows a block diagram of the setup.
 
 \section{Setup}
 \begin{figure}
@@ -14,7 +14,7 @@ In order to create an accurate clock-model of the atomic clock, it was necessary
    \label{ibd}
 \end{figure}
 
-Figure \ref{ibd} shows how the Server, Sensors and atomic clock were physically set up. In order to assure good GPS satellite geometry, the antennas were placed at the roof of Justervesenets office at Kjeller. Antenna 1 was placed at a railing about a 1 meter above the ground, antenna 2 was placed at ground level. Figure \ref{sensor_kart} shows the placement of the antennas. Antenna 1 was connected to GPS receiver 1 which in turn was connected to Sensor 1. It's the same deal with antenna 2 which was connected to GPS receiver 2 which in turn was connected to Sensor 2. The distance between the two antennas was about 35 meters. The antenna connected to Sensor 1 did not utilize the full length of it's cable. This is because it proved challenging to find a place where the antenna could be placed in stable position, yet use the full length of the cable. The Sensors and the Server were connected to LAN through a Gigabit ethernet switch. The Server was configured to log telemetry received from the atomic clock and the Clients were configured to log all NMEA data received from the GPS receivers. The GPS receiver connected to antenna South is used to supply the atomic clock with a 1 PPS signal. Because the atomic clock model needs live data over time to mature, the system was started Friday 7. October 2016 and the test was performed Monday 10. October 2016. Figure \ref{msd} is a block diagram showing how the measuring setup was physically configured. The measuring was done by a Spectracom CNT-91 frequency counter using a 10 MHz reference from Justervesenet's atomic clocks. The CNT-91 was configured to measure a continuous gap-less frequency at 1 second time intervals. Figure \ref{lab_setup_photo} is a photograph of the measuring setup. Both Sensors were configured to use Justervesenet's internal NTP server and to use UTC instead of GMT+1.
+Figure \ref{ibd} shows how the server, sensors and atomic clock were physically set up. In order to assure good GPS satellite geometry, the antennas were placed at the roof of Justervesenet's office at Kjeller. Antenna one was placed at a railing about one meter above the ground, antenna two was placed at ground level. Figure \ref{sensor_kart} shows the placement of the antennas. Antenna one was connected to GPS receiver one which in turn was connected to sensor one. It is the same deal with antenna two which was connected to GPS receiver two which in turn was connected to Sensor two. The distance between the two antennas was about 35 meters. The antenna connected to sensor one did not utilize the full length of its cable. This is because it proved challenging to find a place where the antenna could be placed in stable position yet use the full length of the cable. The sensors and the server were connected to LAN through a Gigabit Ethernet switch. The Server was configured to log telemetry received from the atomic clock, and the clients were configured to log all NMEA data received from the GPS receivers. The GPS receiver connected to antenna South was also used to supply the atomic clock with a one PPS signal. Because the atomic clock model needs live data over time to mature, the system was started Friday 7. October 2016 and the test was performed Monday 10. October 2016. Figure \ref{msd} is a block diagram showing how the measuring setup was physically configured. The measuring was done using a Spectracom CNT-91 frequency counter using a 10 MHz reference from Justervesenet's atomic clocks. The CNT-91 was configured to measure a continuous gap-less frequency at one second time intervals. Figure \ref{lab_setup_photo} is a photograph of the measuring setup. Both sensors were configured to use Justervesenet's internal NTP server and to use UTC instead of GMT+1.
 
 \section{Test 1 filter limits}
 Table \ref{gps_filter_table} shows the filter thresholds used during both test 1. 
@@ -51,12 +51,12 @@ Table \ref{gps_filter_table} shows the filter thresholds used during both test 1
    \label{sensor_kart}
 \end{figure}
 
-\section{Test 1}
+\section{Test one}
 \subsection{Goal of test}
-The goal with this test was to use the atomic clock controller to detect a simulated spoofing attack. By moving the antennas, the location and speed filter should be triggered as the solved longitude, altitude, latitude and speed should change. See \ref{ls_filter} for more about the location and speed filter. The result would be observable by analyzing the log files produced by the Server and Clients and the data collected by the measuring setup.
+The goal with test one was to use the atomic clock controller to detect a simulated spoofing attack. By moving the antennas the location and speed filter should be triggered as the solved longitude, altitude, latitude and speed change. See \ref{ls_filter} for more about the location and speed filter. The result would be observable by analyzing the log files produced by the server and clients and the data collected by the measuring setup.
 
 \subsection{Description}\label{test1_description}
-The following is a step by step description of how the test was conducted. The time in the brackets was obtained from a wristwatch. It is written in the normal format as well as number of seconds after 10:48. This is because the data used to draw the graphs, started at 10:48 but uses seconds in the X axis. Comparison is therefore easier. It is important to note that nor the resolution or accuracy was of any notable concern when writing down the time. The time was mainly noted to make it easier to find any correlation between the steps taken and patterns found in the log files. 
+The following is a step by step description describing how the test was conducted. The time in the brackets was obtained from a wristwatch. The time is written in the normal format as well as number of seconds after 10:48. This is because the data used to draw the graphs started at 10:48 but uses seconds in the X axis. Comparison is therefore easier. It is important to note that nor the resolution or accuracy was of any notable concern when writing down the time. The time was mainly noted to make it easier to find any correlation between the steps taken and patterns found in the log files. 
 
 \begin{itemize}
   \item\relax 10:58 - 600: Moved antenna 1 approximately 15 meters to the south.
@@ -71,7 +71,7 @@ The following is a step by step description of how the test was conducted. The t
   \item\relax 11:33 - 2700: Removed foil from antenna 2.
 \end{itemize}
 
-Step 1 and 2 were designed to trigger the location and speed filter, especially the check of solved latitude, longitude and altitude but also the speed, against known values. Step 5 and 6 was also designed to trigger the location and speed filter, but more specifically the checking of solved speed. Step 7 and 8 was to designed to reveal what would happen during a jamming attack as it was believed that covering the antennas with aluminium foil would block all signals out. A photography showing how the antenna was covered, can be seen under section \ref{antenna_foil_cover}.
+Step one and two were designed to trigger the location and speed filter, especially the check of solved latitude, longitude and altitude but also the speed against known values. Step five and six were also designed to trigger the location and speed filter but more specifically the checking of solved speed. Step seven and eight were to designed to reveal what would happen during a jamming attack as it was believed that covering the antennas with aluminium foil would block all signals out. A photography showing how the antenna was covered, can be seen under section \ref{antenna_foil_cover}.
 
 \subsection{Observations}\label{test1_observations}
 \subsubsection{Sensor Server logs}
@@ -110,26 +110,26 @@ By reviewing the log produced by the Sensor Server, the following was observed:
 \end{itemize}
 
 \subsubsection{GPS data}\label{gpsdata_test1}
-The following figures are plots of the GPS data (NMEA) that was logged by the Sensors during test 1. Figure \ref{sensor1_alt} shows the altitude in meters for Sensor 1. The only thing that stands out in the plot, is when the antenna is covered in aluminium foil as show at around the 2000 second mark. At this point, the receiver is no longer able to solve a position thus generating valid but empty fields in the data. This creates a deep chasm in the plot. Because both receivers' antennas were covered in foil, all the plots share this trait. Figure \ref{sensor2_alt} shows the altitude in meters for Sensor 2. When compared with the altitude plot for Sensor 1 \ref{sensor1_alt}, Sensor 1 seems to correlate better. It is a puzzle why the Sensor 2 reported to have been moved 7 meters down, which it clearly was not. When examining figure \ref{sensor1_lat} and \ref{sensor2_lat}, showing the latitude for Sensor 1 and 2 (in that order), one can clearly see that Sensor 1 was moved to the south and Sensor 2 was moved to the north. One might also notice that Sensor 2 traveled further. The difference in travel is because Sensor 1's antenna did not utilize the full length of cable. Figure \ref{sensor1_long} and \ref{sensor2_long} shows a plot for the solved longitude for Sensor 1 and Sensor 2. When examining figure \ref{sensor1_long}, it seems as if the antenna was never moved. This is because the building the antenna was placed on, is position in a north to south line and the receiver was moved along with the roof. The antenna connected to Sensor 2 was not moved in straight line because the cable got caught in vegetation. The last two figures, figure \ref{sensor1_speed} and figure \ref{sensor2_speed} shows the speed solved by Sensor 1 and Sensor 2. They both correlate well with when the antennas were moved, however, the antenna connected to sensor 2 seems to be a little bit more sensitive than the on connected to Sensor
+The following figures are plots of the GPS data that was logged by the sensors during test one. Figure \ref{sensor1_alt} shows the altitude in meters reported by sensor one. The only thing that stands out in the plot is when the antenna is covered in aluminium foil as show at around the 2000 second mark. At this point the receiver is no longer able to solve a position thus generating valid but empty fields in the data. This creates a deep void in the plot. Because both receivers' antennas were covered in foil, all the plots share this trait. Figure \ref{sensor2_alt} shows the altitude in meters as reported by sensor two. When compared with the altitude plot for sensor one \ref{sensor1_alt}, sensor one seems to correlate better. It is a puzzle why sensor two reported to have been moved seven meters down which it clearly was not. When examining figure \ref{sensor1_lat} and \ref{sensor2_lat} showing the latitude for sensor one and two (in that order), one can clearly see that sensor one was moved to the south and sensor two was moved to the north. One might also notice that sensor two traveled further. The difference in travel is because sensor one's antenna did not utilize the full length of cable. Figure \ref{sensor1_long} and \ref{sensor2_long} shows a plot for the solved longitude for sensor one and sensor two. When examining figure \ref{sensor1_long} it seems as if the antenna was never moved. This is because the building the antenna was placed on is position in a north to south line and the receiver was moved along with the roof. The antenna connected to sensor two was not moved in straight line because the cable got caught in vegetation. The last two figures, figure \ref{sensor1_speed} and figure \ref{sensor2_speed} shows the speed solved by sensor one and sensor two. They both correlate well with when the antennas were moved, however the antenna connected to sensor two seems to be a little bit more sensitive than the antenna connected to sensor one.
 
 \begin{sidewaysfigure}
   \centering
   \includegraphics[width=1\textwidth]{gnssAlt1-1.png}
-  \caption{The figure shows the solved altitude of the GPS receiver connected to Sensor 1, during test 1}
+  \caption{The figure shows the solved altitude of the GPS receiver connected to sensor one, during test one}
   \label{sensor1_alt}
 \end{sidewaysfigure}
 
 \begin{sidewaysfigure}
   \centering
   \includegraphics[width=1\textwidth]{gnssAlt2-1.png}
-  \caption{The figure shows the solved altitude of the GPS receiver connected to Sensor 2, during test 1}
+  \caption{The figure shows the solved altitude of the GPS receiver connected to sensor two, during test one}
   \label{sensor2_alt}
 \end{sidewaysfigure}
 
 \begin{sidewaysfigure}
   \centering
   \includegraphics[width=1\textwidth]{gnssLat1-1.png}
-  \caption{The figure shows the solved latitude of the GPS receiver connected to Sensor 1, during test 1}
+  \caption{The figure shows the solved latitude of the GPS receiver connected to sensor one, during test one}
   \label{sensor1_lat}
 \end{sidewaysfigure}
  
@@ -137,7 +137,7 @@ The following figures are plots of the GPS data (NMEA) that was logged by the Se
 \begin{sidewaysfigure}
   \centering
   \includegraphics[width=1\textwidth]{gnssLat2-1.png}
-  \caption{The figure shows the solved latitude of the GPS receiver connected to Sensor 2, during test 1}
+  \caption{The figure shows the solved latitude of the GPS receiver connected to sensor two, during test one}
   \label{sensor2_lat}
 \end{sidewaysfigure}
  
@@ -145,7 +145,7 @@ The following figures are plots of the GPS data (NMEA) that was logged by the Se
 \begin{sidewaysfigure}
   \centering
   \includegraphics[width=1\textwidth]{gnssLong1-1.png}
-  \caption{The figure shows the solved longitude of the GPS receiver connected to Sensor 1, during test 1}
+  \caption{The figure shows the solved longitude of the GPS receiver connected to sensor one, during test one}
   \label{sensor1_long}
 \end{sidewaysfigure}
  
@@ -153,7 +153,7 @@ The following figures are plots of the GPS data (NMEA) that was logged by the Se
 \begin{sidewaysfigure}
   \centering
   \includegraphics[width=1\textwidth]{gnssLong2-1.png}
-  \caption{The figure shows the solved longitude of the GPS receiver connected to Sensor 2, during test 1}
+  \caption{The figure shows the solved longitude of the GPS receiver connected to sensor two, during test one}
   \label{sensor2_long}
 \end{sidewaysfigure}
  
@@ -161,7 +161,7 @@ The following figures are plots of the GPS data (NMEA) that was logged by the Se
 \begin{sidewaysfigure}
   \centering
   \includegraphics[width=1\textwidth]{gnssSpeed1-1.png}
-  \caption{The figure shows the solved speed of the GPS receiver connected to Sensor 1, during test 1}
+  \caption{The figure shows the solved speed of the GPS receiver connected to sensor one, during test one}
   \label{sensor1_speed}
 \end{sidewaysfigure}
  
@@ -169,7 +169,7 @@ The following figures are plots of the GPS data (NMEA) that was logged by the Se
 \begin{sidewaysfigure}
   \centering
   \includegraphics[width=1\textwidth]{gnssSpeed2-1.png}
-  \caption{The figure shows the solved speed of the GPS receiver connected to Sensor 2, during test 1}
+  \caption{The figure shows the solved speed of the GPS receiver connected to sensor two, during test one}
   \label{sensor2_speed}
 \end{sidewaysfigure}
  
@@ -194,7 +194,7 @@ Figure \ref{cns91_tel_freq} shows the relative frequency offset($10^{12}$) for t
 
 \newpage
 \subsection{Test 1 results}
-The observations from test 1 revealed some surprising results. When the antennas were moved horizontally, the altitude solved by Sensor 2 dramatically changed. The movement also resulted in a change in the timing solution. The GPS filter did however perform as expected. We discovered that the reason why the step 5 and 6 failed to trigger the filter, was that the limit for speed (see \ref{gps_filter_table} for more) was set too high. 
+The observations from test 1 revealed some surprising results. When the antennas were moved horizontally, the altitude solved by sensor 2 dramatically changed. The movement also resulted in a change in the timing solution. The GPS filter did however perform as expected. We discovered that the reason why the step 5 and 6 failed to trigger the filter, was that the limit for speed (see \ref{gps_filter_table} for more) was set too high. 
 
 \section{Test 2}\label{test2}
 \subsection{Goal of test}
